syntax = "proto3";
package iot.registration;
import "types.proto";

service RegistrationService {
    rpc Register(RegistrationRequest) returns (RegistrationResponse);
};

message RegistrationRequest {
    string public_key = 1;
    string name = 2;
    repeated iot.types.DeviceCapabilityStatus capabilities = 3;
}
message RegistrationResponse {
    string public_key = 1;
    string client_id = 2;
    string certificate = 3;
}
